improving commercial requirements: DTO to records, new test