@@ -5,54 +5,58 @@ import com.project.githubapi.DTO.RepositoryDTO;
 import com.project.githubapi.Exceptions.UserNotFoundException;
 import com.project.githubapi.GithubMapping.BranchResponse;
 import com.project.githubapi.GithubMapping.RepositoryResponse;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.HttpClientErrorException;
-import org.springframework.web.client.RestTemplate;
+import org.springframework.web.client.RestClient;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class GithubService {
-    private final RestTemplate restTemplate = new RestTemplate();
+    private final RestClient restClient;
 
-    public List<RepositoryDTO> getRepos(String username) {
-        String url = "https://api.github.com/users/" + username + "/repos";
-        ResponseEntity<RepositoryResponse[]> response;
-
-        try {
-            response = restTemplate.getForEntity(url, RepositoryResponse[].class);
-        }
-        catch (HttpClientErrorException.NotFound exception) {
-            throw new UserNotFoundException("User not found");
-        }
-
-        if (response.getBody() == null || response.getBody().length == 0) {
-            return List.of();
-        }
-
-        return Arrays.stream(response.getBody())
-                .filter(r -> !r.isFork()) // filter out forks
-                .map(r -> {
-                    // for each repo fetch branch details
-                    List<BranchDTO> branches = fetchBranches(r.getName(), r.getOwner().getLogin());
-                    return new RepositoryDTO(r.getName(), r.getOwner().getLogin(), branches);
-                })
-                .collect(Collectors.toList());
+    public GithubService(RestClient.Builder restClientBuilder) {
+        this.restClient = restClientBuilder
+                .baseUrl("https://api.github.com")
+                .build();
     }
 
-    private List<BranchDTO> fetchBranches(String repo, String owner) {
-        String url = "https://api.github.com/repos/" + owner + "/" + repo + "/branches";
-        ResponseEntity<BranchResponse[]> response = restTemplate.getForEntity(url, BranchResponse[].class);
+    public List<RepositoryDTO> getRepos(final String username) {
+        try {
+            final RepositoryResponse[] repositories = restClient.get()
+                    .uri("/users/{username}/repos", username)
+                    .retrieve()
+                    .body(RepositoryResponse[].class);
 
-        if (response.getBody() == null || response.getBody().length == 0) {
+            if (repositories == null) {
+                return List.of();
+            }
+
+            return Arrays.stream(repositories)
+                    .filter(repo -> !repo.isFork())
+                    .map(repo -> {
+                        final List<BranchDTO> branches = fetchBranches(repo.name(), repo.owner().login());
+                        return new RepositoryDTO(repo.name(), repo.owner().login(), branches);
+                    })
+                    .toList();
+        } catch (HttpClientErrorException.NotFound e) {
+            throw new UserNotFoundException("User not found");
+        }
+    }
+
+    private List<BranchDTO> fetchBranches(final String repo, final String owner) {
+        final BranchResponse[] branches = restClient.get()
+                .uri("/repos/{owner}/{repo}/branches", owner, repo)
+                .retrieve()
+                .body(BranchResponse[].class);
+
+        if (branches == null) {
             return List.of();
         }
-        // return array of branches mapped to DTO
-        return Arrays.stream(response.getBody())
-                .map(b -> new BranchDTO(b.getName(), b.getCommit().getSha()))
-                .collect(Collectors.toList());
+
+        return Arrays.stream(branches)
+                .map(branch -> new BranchDTO(branch.name(), branch.commit().sha()))
+                .toList();
     }
 }
